# the-crucible

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  start_dev.sh
backend/: .dockerignore  .gitignore  Dockerfile  README.md  db.py  graph.py  history_tree.py  main.py  parser.py  pyproject.toml  ruff_errors.txt  schema.py  utils.py
backend/routers/: history.py  models.py  threads.py  upload.py
backend/tests/: conftest.py  test_db.py  test_graph.py  test_history_tree.py  test_main.py  test_models.py  test_routers.py
frontend/: .dockerignore  .prettierignore  Dockerfile  README.md  jest.setup.ts  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatView.test.tsx  ChatView.tsx  ControlPanel.tsx  CustomTreeNode.tsx  ErrorModal.tsx  LandingView.tsx  Sidebar.test.tsx  Sidebar.tsx  ThemeRegistry.tsx  Toast.tsx  TreeCanvas.tsx
frontend/src/hooks/: useChatWebSocket.test.ts  useChatWebSocket.ts  useHistoryTree.test.ts  useHistoryTree.ts  useThreads.test.ts  useThreads.ts
frontend/src/lib/: api.ts
